2008-08-11  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyeat.el (tinyeat-repeat-macro): Convert to modern backquote.
	(tinyeat-verbose-macro): Convert to modern backquote.

2008-08-10  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinytf.el (tinytf-toc-insert-list): New.
	(tinytf-toc): Move code to `tinytf-toc-insert-list'.
	Move `ti::buffer-trim-blanks' down so that indentation
	of the blank lines is removed.

2008-04-15  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyirc.el (tinyirc-pastebot-install-perl-util-pastebot):
	Add help text 'press TAB'. Add `file-modes' to make program
	executable.
	(tinyirc-pastebot-install-example-servers): Add missing space
	to message string.

2008-03-07  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyirc.el (tinyirc-pastebot-program-name): New.
	(tinyirc-pastebot-program-1): Use `tinyirc-pastebot-program-name'.
	(tinyirc-pastebot-send-region): Signal error if there is no program.
	(tinyirc-:pastebot-config-default-content): Remove dragon server.

	* tiny/tinyreplace.el (tinyreplace-:menu): Remove keys `5' and `%'.
	Improve doctring.
	(tinyreplace-replace-over-files-compile-buffer): Fix typo.
	(tinyreplace-replace-region): Fix typo.

2008-03-05  Jari Aalto  <jari.aalto@cante.net>

	* other/folding.el: (top level): Correct Copyright Years.

2008-03-03  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylibmail.el (ti::mail-parse-name): Ignore 'Dr.' etc prefixes.
	(ti:mail-parse-name-not-accept): Ignore 'Dr.'.

	* tiny/tinymail.el (tinymail-citation-who-said): Show full name.
	Delete 'remove middle name' code.

2008-02-26  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyreplace.el (tinyreplace-replace-region-1): Fix spelling.

2008-02-18  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-ubuntu-p): New.
	(tinydebian-bug-url): New.
	(tinydebian-bug-browse-url-by-bug): Use `tinydebian-bug-url'.
	(tinydebian-bug-nbr-string): DEtect Ubuntu bug line.

	* tiny/tinyreplace.el (tinyreplace-define-keys-compile-map):